# pkguard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
pkgguard/: cli.py  registries.py
pkguard/: cli.py  heuristics.py  popular.py  registries.py
standalone/: build_exe.py  install.ps1  install.sh  pkgguard.py  pkguard.py
